Fixed the too-wide table issue in phone gap sample

--- a/PhonegapSample/www/phonegapsample.css
+++ b/PhonegapSample/www/phonegapsample.css
@@ -21,7 +21,7 @@ table.phonegapTable
 
 table.phonegapTable th
 {
-    width: 100%;
+    /*width: 100%;*/
     height: 22px;
     color: white;
     font-weight: bold;
@@ -35,31 +35,35 @@ table.phonegapTable th
 
     /*background-color: #074764;*/
     background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #053044), color-stop(1, #1A557C));
+    width: 280px;
 }
 
 table.phonegapTable tr
 {
-    width: 320px;
+    /*width: 320px;*/
     background-color: white;
     margin: 0;
     padding: 0;
+    width: 280px;
 }
 
 table.phonegapTable tr td
 {
-    width: 300px;
+    /*width: 300px;*/
     padding-left: 10px;
     padding-right: 10px;
     /*word-break:  */
     /*break-all;*/
+    width: 280px;
 }
 
 div.ellipsize
 {
     overflow: hidden;
     text-overflow: ellipsis;
-    width: 300px;
+    /*width: 300px;*/
     /*white-space: nowrap;*/
+    width: 280px;
 
 }
 
@@ -72,18 +76,20 @@ table.phonegapTable tr.singleRow
     font-weight: bold;
     font-size: 18px;
     /*text-shadow: 0.1em 0.1em #333;*/
+    width: 280px;
 }
 
 table.phonegapTable tr.keyRow
 {
     /*width: 100%;*/
-    width: 300px;
+    /*width: 300px;*/
     min-height: 22px;
     color: black;
     font-family: Helvetica, Arial, sans-serif;
     font-weight: bold;
     font-size: 18px;
     /*text-shadow: 0.1em 0.1em #333;*/
+    width: 280px;
 }
 
 table.phonegapTable tr.valueRow
@@ -97,18 +103,21 @@ table.phonegapTable tr.valueRow
     /*text-shadow: 0.1em 0.1em #333;*/
 
     border-bottom: 1px solid gray;
+    width: 280px;
 }
 
 table.phonegapTable tr td.levelTwo
 {
     padding-left: 20px;
-    width: 290px;
+    /*width: 290px;*/
+    width: 280px;
 }
 
 table.phonegapTable tr.keyRow td.levelTwo
 {
     font-size: 16px;
     font-weight: normal;
+    width: 280px;
 }
 
 table.phonegapTable tr.levelThree td
